--- a/public/css/project.css
+++ b/public/css/project.css
@@ -102,6 +102,7 @@ nav {
     font-size: 1.5rem;
 }
 
+
 @media screen and (max-width: 768px) {
     nav {
         top: 0;
@@ -117,16 +118,17 @@ nav {
         position: absolute;
         top: 100%;
         left: 0;
-        width: 100%;
+        width: 30%;
         background: rgba(255, 255, 255, 0.9);
-        padding: 10px 0;
-        border-radius: 0;
+        padding: 10px 10px;
+        border-radius: 8px;
         gap: 10px;
+        text-align: start;
     }
 
     .nav-item a {
         color: var(--bg-color);
-        text-align: center;
+        text-align: start;
         padding: 5px;
         width: 100%;
     }
@@ -154,15 +156,16 @@ nav {
         position: absolute;
         top: 100%;
         left: 0;
-        width: 100%;
+        width: 30%;
         background: rgba(255, 255, 255, 0.95);
-        padding: 5px 0;
+        padding: 10px 5px;
         gap: 8px;
+        border-radius: 8px;
     }
 
     .nav-item a {
         color: var(--bg-color);
-        text-align: center;
+        text-align: start;
         padding: 8px;
         font-size: 14px;
         width: 100%;
@@ -219,7 +222,7 @@ Contacts
         margin: 0;
         position: fixed;
         left: 50%;
-        top: 10px;
+        top: calc(1% - 3px);
         transform: translateX(-50%);
         z-index: 99999;
         padding: 8px 20px; 
@@ -240,7 +243,7 @@ Contacts
         margin: 0;
         position: fixed;
         left: 50%;
-        top: 5px;
+        top: calc(1% - 3px);
         transform: translateX(-50%);
         z-index: 99999;
         padding: 5px 15px; 
@@ -273,6 +276,7 @@ DROPDOWN
 }
 
 .dropdown-content {
+    width: auto;
     display: none; 
     position: absolute;
     background-color: #333333; 
@@ -298,36 +302,55 @@ DROPDOWN
 }
 
 @media screen and (max-width: 768px) {
-    nav {
-        padding: 5px 15px;
-        width: 80%;
+    .dropdown-content {
+        width: auto;
+        display: none; 
+        position: absolute;
+        background-color: #333333; 
+        min-width: 180px; 
+        box-shadow: 0 8px 16px rgba(0,0,0,0.2);
+        z-index: 1;
+        border-radius: 8px;
+        transform: translate(20px, 30px);
     }
-    .nav-item {
-        flex-wrap: wrap; 
-        gap: 3px;
-        font-size: 0.8rem;
+    
+    .dropdown-content a {
+        color: var(--text-color); 
+        padding: 10px 15px; 
+        display: block; 
     }
-    .nav-item a {
-        padding: 5px 10px; 
+
+    .dropdown-content a:hover {
+        width: auto;
+        background-color: #D1D1D1; 
+    }
+    
+}
+@media screen and (max-width: 360px) {
+    .dropdown-content {
+        width: auto;
+        display: none;
+        position: absolute;
+        background-color: #333333;
+        min-width: 180px; 
+        box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2); 
+        z-index: 1;
+        border-radius: 6px; 
+        transform: translate(15px, 20px); 
+    }
+    
+    .dropdown-content a {
+        color: var(--text-color);
+        padding: 8px 12px; 
+        display: block;
+        font-size: 0.8rem; 
+    }
+
+    .dropdown-content a:hover {
+        width: auto;
+        background-color: #D1D1D1;
     }
 }
-
-@media screen and (max-width: 480px) {
-    nav {
-        padding: 2px 10px;
-        width: 60%;
-    }
-    .nav-item {
-        flex-direction: column;
-        align-items: center;
-        gap: 5px;
-    }
-    .nav-item a {
-        padding: 10px 15px;
-        font-size: 1rem;
-    }
-}
-
 
 /*
 
@@ -368,6 +391,7 @@ PROJECT
 
 .carousel-used p{
     margin: 10px;
+    font-size: 1rem;
     font-weight: 500;
 }
 
@@ -399,12 +423,6 @@ PROJECT
     background: var(--bg-color);
     gap: 15px;
     border-image: fill 0 linear-gradient(#0001, #111)
-}
-
-.slide h2{
-    font-size: 4rem;
-    font-weight: 900;
-    letter-spacing: 5px;
 }
 
 .slide a{
@@ -469,17 +487,153 @@ PROJECT
 }
 
 @media screen and (max-width: 768px) {
-    .slide {
-        gap: 5px;
+    .project-item{
+        padding-top: 5px;
     }
-    .slide h2{
-        font-size: 2rem;
-        letter-spacing: 3px;
+    
+    .project-item h1{
+        margin: 20px 10px;
+        font-size: 1.5rem;
         font-weight: 700;
+        letter-spacing: 4px;
     }
-    .slide button{
-        font-size: 1rem;
+    
+    .used{
+        display: flex;
+        gap: 5px;
+        justify-content: center; 
+        align-items: center;
+        margin-bottom: 10px;
+    }
+    
+    .used img{
+        border-radius: 4px;
+        width: 15px;
+        height: auto;
+    }                                                   
+    
+    .carousel-used p{
+        margin: 10px;
+        font-size: 0.8rem;
         font-weight: 300;
+    }
+    
+    .carousel {
+        position: relative;
+        width: 100%;
+        height: auto;
+        border-radius: 0.4rem;
+        margin: auto;
+        overflow: hidden;
+        filter: drop-shadow(0 2px 5px rgba(0, 0, 0, 0.4));
+    }
+      
+    .track {
+        display: flex;
+        position: relative;
+        width: 100%;
+        height: 100%;
+        transition: transform 300ms ease-in-out;
+    }
+      
+    .slide {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        min-width: 100%;
+        min-height: 100%;
+        font-size: 1rem;
+        background: var(--bg-color);
+        gap: 15px;
+        border-image: fill 0 linear-gradient(#0001, #111)
+    }
+    
+    .slide img{
+        width: 100%;
+        height: auto
+    }
+      
+    .prev, .next {
+        font-size: 1rem;
+    }
+    
+    .label {
+        font-size: 0.8rem; 
+    }    
+}
+@media screen and (max-width: 360px) {
+    .project-item {
+        padding-top: 3px;
+    }
+    
+    .project-item h1 {
+        margin: 15px 5px;
+        font-size: 1.2rem;
+        font-weight: 700;
+        letter-spacing: 3px;
+    }
+    
+    .used {
+        display: flex;
+        gap: 3px;
+        justify-content: center;
+        align-items: center;
+        margin-bottom: 8px;
+    }
+    
+    .used img {
+        border-radius: 3px;
+        width: 12px;
+        height: auto;
+    }
+    
+    .carousel-used p {
+        margin: 8px;
+        font-size: 0.7rem;
+        font-weight: 300;
+    }
+    
+    .carousel {
+        position: relative;
+        width: 100%;
+        height: auto;
+        border-radius: 0.3rem;
+        margin: auto;
+        overflow: hidden;
+        filter: drop-shadow(0 1px 4px rgba(0, 0, 0, 0.3));
+    }
+    
+    .track {
+        display: flex;
+        position: relative;
+        width: 100%;
+        height: 100%;
+        transition: transform 250ms ease-in-out;
+    }
+    
+    .slide {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        min-width: 100%;
+        min-height: 100%;
+        font-size: 0.9rem;
+        background: var(--bg-color);
+        gap: 10px;
+        border-image: fill 0 linear-gradient(#0001, #111);
+    }
+    
+    .slide img {
+        width: 100%;
+        height: auto;
+    }
+    
+    .prev, .next {
+        font-size: 0.9rem;
+    }
+    
+    .label {
+        font-size: 0.7rem;
     }
 }
 
@@ -496,6 +650,7 @@ FOOTER
     padding: 40px;
     position: relative;
     height: auto;
+    width: 100%;
 }
 .footer-child{
     display: grid;
@@ -506,8 +661,8 @@ FOOTER
     color: var(--primary-color);
     margin: 10px 15px;
     text-decoration: none;
-    font-size: 24px;
-    text-align: start;
+    font-size: 18px;
+    text-align: center;
 }
 
 /* 
@@ -589,6 +744,220 @@ Projects
 .footer-child .footer-project a:hover {
     transition: color 0.5s ease;
     color: #BFBFBF;
+}
+
+@media screen and (max-width: 768px) {
+    .footer {
+        background-color: #333333;
+        color: var(--text-color);
+        text-align: center;
+        padding: 20px; 
+        position: relative;
+        height: auto;
+        width: auto;
+    }
+    .footer-child {
+        display: grid;
+        grid-template-columns: none;
+        grid-template-rows: repeat(3);
+        gap: 25px; 
+    }
+    .footer-child h1 {
+        color: var(--primary-color);
+        margin: 10px 15px;
+        text-decoration: none;
+        font-size: 1rem;
+        text-align: center;
+    }
+    
+    /* 
+    Location 
+    */
+    .footer-child .footer-loc {
+        display: flex;
+        flex-direction: column;
+    }
+    .footer-child .footer-loc .links {
+        display: flex;
+        flex-direction: row;
+        gap: 10px; 
+        justify-content: center;
+    }
+    .footer-child .footer-loc h1 {
+        text-align: center;
+    }
+    .footer-child .footer-loc a {
+        color: var(--text-color);
+        margin: 0 10px;
+        text-decoration: none;
+        font-size: 0.9rem; 
+        text-align: center;
+    }
+    .footer-child .footer-loc a:hover {
+        transition: color 0.5s ease;
+        color: #BFBFBF;
+    }
+    
+    /* 
+    Social Media 
+    */
+    .footer-child .footer-socialmedia {
+        display: flex;
+        flex-direction: column;
+    }
+    .footer-child .footer-socialmedia .links {
+        display: flex;
+        flex-direction: row;
+        gap: 10px;
+        justify-content: center;
+    }
+    .footer-child .footer-socialmedia h1 {
+        text-align: center;
+    }
+    .footer-child .footer-socialmedia a {
+        color: var(--text-color);
+        margin: 0 10px;
+        text-decoration: none;
+        font-size: 1.1rem;
+    }
+    .footer-child .footer-socialmedia a:hover {
+        transition: color 0.5s ease;
+        color: #BFBFBF;
+    }
+    
+    /* 
+    Projects 
+    */
+    .footer-child .footer-project {
+        display: flex;
+        flex-direction: column;
+    }
+    .footer-child .footer-project .links {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+    }
+    .footer-child .footer-project h1 {
+        text-align: center;
+    }
+    .footer-child .footer-project a {
+        color: var(--text-color);
+        margin: 0 10px; 
+        text-decoration: none;
+        font-size: 0.9rem; 
+        text-align: center;
+    }
+    .footer-child .footer-project a:hover {
+        transition: color 0.5s ease;
+        color: #BFBFBF;
+    }
+}
+
+
+@media screen and (max-width: 360px) {
+    .footer {
+        background-color: #333333;
+        color: var(--text-color);
+        text-align: center;
+        padding: 5px;
+        position: relative;
+        height: auto;
+        width: auto;
+    }
+    .footer-child{
+        display: grid;
+        grid-template-columns: none;
+        grid-template-rows: repeat(3);
+        gap: 20px; 
+    }
+    .footer-child h1{
+        color: var(--primary-color);
+        margin: 10px 15px;
+        text-decoration: none;
+        font-size: 1rem;
+        text-align: center;
+    }
+    
+    /* 
+    Location 
+    */
+    .footer-child .footer-loc{
+        display: flex;
+        flex-direction: column;
+    }
+    .footer-child .footer-loc .links{
+        display: flex;
+        flex-direction: row;
+        gap: 3px;
+    }
+    .footer-child .footer-loc h1{
+        text-align: center;
+    }
+    .footer-child .footer-loc a {
+        color: var(--text-color);
+        margin: 0 15px;
+        text-decoration: none;
+        font-size: 0.7rem;
+        text-align: center;
+    }
+    .footer-child .footer-loc a:hover {
+        transition: color 0.5s ease;
+        color: #BFBFBF;
+    }
+    
+    /* 
+    Social Media 
+    */
+    .footer-child .footer-socialmedia{
+        display: flex;
+        flex-direction: column;
+    }
+    .footer-child .footer-socialmedia .links{
+        display: flex;
+        flex-direction: row;
+        gap: 3px;
+        justify-content: center;
+    }
+    .footer-child .footer-socialmedia h1{
+        text-align: center;
+    }
+    .footer-child .footer-socialmedia a {
+        color: var(--text-color);
+        margin: 0 10px;
+        text-decoration: none;
+        font-size: 0.7rem;
+    }
+    .footer-child .footer-socialmedia a:hover {
+        transition: color 0.5s ease;
+        color: #BFBFBF;
+    }
+    
+    /* 
+    Projects 
+    */
+    .footer-child .footer-project{
+        display: flex;
+        flex-direction: column;
+    }
+    .footer-child .footer-project .links{
+        display: flex;
+        flex-direction: column;
+        gap: 3px;
+    }
+    .footer-child .footer-project h1{
+        text-align: center;
+    }
+    .footer-child .footer-project a {
+        color: var(--text-color);
+        margin: 0 15px;
+        text-decoration: none;
+        font-size: 0.7rem;
+        text-align: center;
+    }
+    .footer-child .footer-project a:hover {
+        transition: color 0.5s ease;
+        color: #BFBFBF;
+    }
 }
 
 /* 
