--- a/views/appdev.ejs
+++ b/views/appdev.ejs
@@ -12,6 +12,9 @@
 <body>
     <!--NAVBAR-->
     <nav>
+        <div class="hamburger" onclick="toggleMenu()">
+            &#9776;
+        </div>
         <div class="nav-item">
             <a href="/">Home</a>
             <a href="#contacts">Social Media</a>
