Adding Download CV Feature

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,6 +21,7 @@
             <a href="#experiences">Experience</a>
             <a href="#projects">Project</a>
             <a href="#contacts">Social Media</a>
+            <a href="https://drive.google.com/file/d/1ioyJ6PGsAjYIJWXSOiGOioRlZCFhaSKv/view?usp=sharing" download>Curriculum Vitae</a>
         </div>
     </nav>
     
