--- a/views/uiux.ejs
+++ b/views/uiux.ejs
@@ -18,6 +18,7 @@
         <div class="nav-item">
             <a href="/">Home</a>
             <a href="#contacts">Social Media</a>
+            <a href="https://drive.google.com/file/d/1ioyJ6PGsAjYIJWXSOiGOioRlZCFhaSKv/view?usp=sharing" download>Curriculum Vitae</a>
             <div class="dropdown">
                 <a href="#">Portofolio</a>
                 <div class="dropdown-content">
