--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1018,7 +1018,7 @@ PROJECT
     position: relative;
     width: 100%;
     height: 100vh;
-    border-radius: 0.4rem;
+    border-radius: 0.3rem;
     margin: auto;
     overflow: hidden;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
@@ -1078,7 +1078,7 @@ PROJECT
 
 .prev {
     left: 0;
-    margin: 10px;
+    margin: 4px;
     color: var(--text-color);
     position: absolute;
     top: 50%;
@@ -1086,12 +1086,15 @@ PROJECT
     font-size: 2rem;
     background: transparent;
     cursor: pointer;
-    transition: color 200ms ease-in-out;
+    border-radius: 4px;
+    transition: color 200ms ease-in-out, background-color 200ms ease-in-out;
+    background: rgba(43, 43, 43, 0.7); 
+    backdrop-filter: blur(5px);
 }
   
 .next {
     right: 0;
-    margin: 10px;
+    margin: 4px;
     color: var(--text-color);
     position: absolute;
     top: 50%;
@@ -1099,7 +1102,10 @@ PROJECT
     font-size: 2rem;
     background: transparent;
     cursor: pointer;
-    transition: color 200ms ease-in-out;
+    border-radius: 4px;
+    transition: color 200ms ease-in-out, background-color 200ms ease-in-out;
+    background: rgba(43, 43, 43, 0.7); 
+    backdrop-filter: blur(5px);
 }
 
 .prev:hover, .next:hover{
@@ -1112,7 +1118,7 @@ PROJECT
         position: relative;
         width: 100%;
         height: auto; 
-        border-radius: 0.4rem;
+        border-radius: 0.3rem;
         margin: auto;
         overflow: hidden;
         box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
@@ -1190,7 +1196,7 @@ PROJECT
         position: relative;
         width: 100%;
         height: auto;
-        border-radius: 0.4rem;
+        border-radius: 0.3rem;
         margin: auto;
         overflow: hidden;
         box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
@@ -1240,10 +1246,11 @@ PROJECT
         top: 50%;
         transform: translateY(-50%);
         border: none;
-        font-size: 1rem;
+        font-size:  1.2rem;
         background: transparent;
         cursor: pointer;
         transition: color 200ms ease-in-out;
+        background: rgba(43, 43, 43, 0.7); 
     }
       
     .next {
@@ -1254,10 +1261,11 @@ PROJECT
         top: 50%;
         transform: translateY(-50%);
         border: none;
-        font-size: 1rem;
+        font-size: 1.2rem;
         background: transparent;
         cursor: pointer;
         transition: color 200ms ease-in-out;
+        background: rgba(43, 43, 43, 0.7); 
     }
 
 }
