--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1082,6 +1082,7 @@ PROJECT
     color: var(--text-color);
     position: absolute;
     top: 50%;
+    transform: translate(-50%);
     border: none;
     font-size: 2rem;
     background: transparent;
@@ -1098,6 +1099,7 @@ PROJECT
     color: var(--text-color);
     position: absolute;
     top: 50%;
+    transform: translate(-50%);
     border: none;
     font-size: 2rem;
     background: transparent;
