--- a/views/webdev.ejs
+++ b/views/webdev.ejs
@@ -142,21 +142,19 @@
         </div>
 
         <div class="project-item">
-            <h1>Transjakarta Look-alike</h1>
+            <h1>Gula Java</h1>
             <div class="carousel-used">
                 <div class="used">
                     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-original.svg" />
                     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/css3/css3-original.svg" />
                     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/javascript/javascript-original.svg" />
-                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/angularjs/angularjs-original.svg" />
                 </div>
                 <div class="carousel">
                     <div class="track">
-                        <img src="src/Webdev_Transjakarta/intro.jpg" alt="Intro" class="slide">
-                        <img src="src/Webdev_Transjakarta/rute.jpg" alt="Rute" class="slide">
-                        <img src="src/Webdev_Transjakarta/koridot.jpg" alt="Koridor" class="slide">
-                        <img src="src/Webdev_Transjakarta/type.jpg" alt="Bus Type" class="slide">
-                        <img src="src/Webdev_Transjakarta/footer.jpg" alt="Footer" class="slide">
+                        <img src="src/Webdev_GulaJava/Intro.png" alt="Intro" class="slide">
+                        <img src="src/Webdev_GulaJava/Kritik.png" alt="Kritik" class="slide">
+                        <img src="src/Webdev_GulaJava/Shop.png" alt="Shop" class="slide">
+                        <img src="src/Webdev_GulaJava/Footer.png" alt="Footer" class="slide">
                     </div>
                     <button class="prev">&#8592;</button>
                     <button class="next">&#8594;</button>
