--- a/views/appdev.ejs
+++ b/views/appdev.ejs
@@ -59,8 +59,8 @@
                         <img src="src\Appdev_Poutendance\profil.png" alt="Profile & Home page" class="slide">
                         <img src="src\Appdev_Poutendance\scan.png" alt="Scanner & QR page" class="slide">
                     </div>
-                    <button class="prev">&#8592;</button>
-                    <button class="next">&#8594;</button>
+                    <button class="prev"><i class="fas fa-chevron-left"></i></button>
+                    <button class="next"><i class="fas fa-chevron-right"></i></button>
                 </div>
             </div>
         </div>
