--- a/views/data.ejs
+++ b/views/data.ejs
@@ -60,8 +60,8 @@
                         <img src="src\Data_OptimalisasiBisnis\Test_Data.png" alt="Test Data" class="slide">
                         <img src="src\Data_OptimalisasiBisnis\Accuracy.png" alt="Accuracy Data" class="slide">
                     </div>
-                    <button class="prev">&#8592;</button>
-                    <button class="next">&#8594;</button>
+                    <button class="prev"><i class="fas fa-chevron-left"></i></button>
+                    <button class="next"><i class="fas fa-chevron-right"></i></button>
                 </div>
             </div>
         </div>
@@ -80,8 +80,8 @@
                         <img src="src\Data_AirQualityChina\pollutantbased.png" alt="Pollutant Based Graphics" class="slide">
                         <img src="src\Data_AirQualityChina\whatis.png" alt="Dictionary" class="slide">
                     </div>
-                    <button class="prev">&#8592;</button>
-                    <button class="next">&#8594;</button>
+                    <button class="prev"><i class="fas fa-chevron-left"></i></button>
+                    <button class="next"><i class="fas fa-chevron-right"></i></button>
                 </div>
             </div>
         </div>
