--- a/views/index.ejs
+++ b/views/index.ejs
@@ -260,8 +260,8 @@
                         </div>
                     </div>
                 </div>
-                <button class="prev">&#8592;</button>
-                <button class="next">&#8594</button>
+                <button class="prev"><i class="fas fa-chevron-left"></i></button>
+                <button class="next"><i class="fas fa-chevron-right"></i></button>
             </div>
         </div>
     </section>
