--- a/views/uiux.ejs
+++ b/views/uiux.ejs
@@ -58,8 +58,8 @@
                         <img src="src/uiux_Twizzed/v4.png" alt="Ex 4" class="slide">
                         <img src="src/uiux_Twizzed/prototype.png" alt="Prototype" class="slide">
                     </div>
-                    <button class="prev">&#8592;</button>
-                    <button class="next">&#8594;</button>
+                    <button class="prev"><i class="fas fa-chevron-left"></i></button>
+                    <button class="next"><i class="fas fa-chevron-right"></i></button>
                 </div>
             </div>
         </div>
@@ -78,8 +78,8 @@
                         <img src="src/uiux_Poutendance/v4.png" alt="Ex 4" class="slide">
                         <img src="src/uiux_Poutendance/prototype.png" alt="Prototype" class="slide">
                     </div>
-                    <button class="prev">&#8592;</button>
-                    <button class="next">&#8594;</button>
+                    <button class="prev"><i class="fas fa-chevron-left"></i></button>
+                    <button class="next"><i class="fas fa-chevron-right"></i></button>
                 </div>
             </div>
         </div>
