--- a/views/webdev.ejs
+++ b/views/webdev.ejs
@@ -65,8 +65,8 @@
                         <img src="src/Webdev_Spicite/Shop.jpg" alt="Shop Page" class="slide">
                         <img src="src/Webdev_Spicite/Cart.jpg" alt="Cart" class="slide">
                     </div>
-                    <button class="prev">&#8592;</button>
-                    <button class="next">&#8594;</button>
+                    <button class="prev"><i class="fas fa-chevron-left"></i></button>
+                    <button class="next"><i class="fas fa-chevron-right"></i></button>
                 </div>
             </div>
         </div>
@@ -92,8 +92,8 @@
                         <img src="src/Webdev_POUTWeb/Admin.png" alt="Admin" class="slide">
                         <img src="src/Webdev_POUTWeb/Add.png" alt="Add" class="slide">
                     </div>
-                    <button class="prev">&#8592;</button>
-                    <button class="next">&#8594;</button>
+                    <button class="prev"><i class="fas fa-chevron-left"></i></button>
+                    <button class="next"><i class="fas fa-chevron-right"></i></button>
                 </div>
             </div>
         </div>
@@ -112,8 +112,8 @@
                         <img src="src/Webdev_KonserDoa/Maps.png" alt="Maps" class="slide">
                         <img src="src/Webdev_KonserDoa/Contact.png" alt="Contact" class="slide">
                     </div>
-                    <button class="prev">&#8592;</button>
-                    <button class="next">&#8594;</button>
+                    <button class="prev"><i class="fas fa-chevron-left"></i></button>
+                    <button class="next"><i class="fas fa-chevron-right"></i></button>
                 </div>
             </div>
         </div>
@@ -135,8 +135,8 @@
                         <img src="src/Webdev_CalDet/Count.png" alt="Count" class="slide">
                         <img src="src/Webdev_CalDet/Search.png" alt="Search" class="slide">
                     </div>
-                    <button class="prev">&#8592;</button>
-                    <button class="next">&#8594;</button>
+                    <button class="prev"><i class="fas fa-chevron-left"></i></button>
+                    <button class="next"><i class="fas fa-chevron-right"></i></button>
                 </div>
             </div>
         </div>
@@ -156,8 +156,8 @@
                         <img src="src/Webdev_GulaJava/Shop.png" alt="Shop" class="slide">
                         <img src="src/Webdev_GulaJava/Footer.png" alt="Footer" class="slide">
                     </div>
-                    <button class="prev">&#8592;</button>
-                    <button class="next">&#8594;</button>
+                    <button class="prev"><i class="fas fa-chevron-left"></i></button>
+                    <button class="next"><i class="fas fa-chevron-right"></i></button>
                 </div>
             </div>
         </div>
