--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,10 +16,10 @@
             &#9776;
         </div>
         <div class="nav-item">
-            <a href="#intros">Intro</a>
-            <a href="#experiences">Experience</a>
-            <a href="#projects">Project</a>
-            <a href="#contacts">Social Media</a>
+            <a href="#intros">About Me</a>
+            <a href="#academics">Academics</a>
+            <a href="#experiences">Experiences</a>
+            <a href="#projects">Projects</a>
             <a href="https://drive.google.com/file/d/1ioyJ6PGsAjYIJWXSOiGOioRlZCFhaSKv/view?usp=sharing" download>Curriculum Vitae</a>
         </div>
     </nav>
@@ -83,7 +83,7 @@
 
     <!--Academic-->
     <section class="academic" id="academics">
-        <h1>ACADEMIC</h1>
+        <h1>ACADEMICS</h1>
         <div class="animate-on-scroll slide-up">
             <div class="academic-item">
                 <div class="colorized" style="transition-delay: 0.6s">
@@ -104,7 +104,7 @@
                 </div>
             </div>
         </div>
-        <h1>COURSE</h1>
+        <h1>COURSES</h1>
         <div class="animate-on-scroll slide-up">
             <div class="academic-item">
                 <div class="colorized" style="transition-delay: 0.5s">
@@ -159,7 +159,7 @@
 
     <!--Experience-->
     <section class="experience" id="experiences">
-        <h1>EXPERIENCE</h1>
+        <h1>EXPERIENCES</h1>
         <div class="animate-on-scroll slide-right">
             <div class="experience-item left">
                 <div class="experience-item-child">
@@ -232,6 +232,7 @@
 
     <!--Project-->
     <section class="project" id="projects">
+        <h1>PROJECTS</h1>
         <div class="project-item">
             <div class="carousel">
                 <div class="track">
