--- a/public/css/home.css
+++ b/public/css/home.css
@@ -128,6 +128,7 @@ nav {
         color: var(--bg-color);
         text-align: start;
         padding: 5px;
+        font-size: 14px;
         width: 100%;
     }
 
@@ -342,7 +343,6 @@ INTRO
         display: flex;
         align-items: center;
         justify-content: center;
-        width: auto;
         height: 600px;
         padding-left: 15px;
     }
@@ -350,7 +350,7 @@ INTRO
     .intro-item h1 {
         font-size: 2.5rem;
         font-weight: 700;
-        letter-spacing: 5px;
+        letter-spacing: 4px;
         margin-top: 30px;
     }
     
@@ -368,7 +368,6 @@ INTRO
         display: flex;
         align-items: center;
         justify-content: center;
-        width: auto;
         height: 500px;
         padding-left: 15px;
     }
