--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,7 @@
             <a href="#academics">Academics</a>
             <a href="#experiences">Experiences</a>
             <a href="#projects">Projects</a>
-            <a href="https://drive.google.com/file/d/1ioyJ6PGsAjYIJWXSOiGOioRlZCFhaSKv/view?usp=sharing" download>Curriculum Vitae</a>
+            <a href="https://drive.google.com/file/d/1Soylrd1pSTQMPPeI-fkUFjfQou2ARZ4K/view?usp=sharing" download>Curriculum Vitae</a>
         </div>
     </nav>
     
@@ -182,7 +182,7 @@
                 <div class="experience-item-child">
                     <div class="animate-on-scroll slide-left">
                         <div class="experience-item-child-text-right">
-                            <h2>Persekutuan Oikumene Universitas Tarumanagara</h2>
+                            <h2>Persekutuan Oikoumene Universitas Tarumanagara</h2>
                             <div class="lighten">
                                 <ul id="POUT-list"></ul>
                             </div>
