--- a/views/data.ejs
+++ b/views/data.ejs
@@ -18,7 +18,7 @@
         <div class="nav-item">
             <a href="/">Home</a>
             <a href="#contacts">Social Media</a>
-            <a href="https://drive.google.com/file/d/1Soylrd1pSTQMPPeI-fkUFjfQou2ARZ4K/view?usp=sharing" download>Curriculum Vitae</a>
+            <a href="https://drive.google.com/file/d/1hxsocjjNdeL9KiIubNPmzR0ZwkO56T95/view?usp=sharing" download>Curriculum Vitae</a>
             <div class="dropdown">
                 <a href="#">Portofolio</a>
                 <div class="dropdown-content">
@@ -46,9 +46,6 @@
         <div class="project-item">
             <h1>Data Mining</h1>
             <div class="carousel-used">
-                <p>Segmentasi Pelanggan Berbasis Naive Bayes: 
-                    Menghubungkan Data Kepribadian dan Riwayat 
-                    Pembelian untuk Optimalisasi Bisnis</p>
                 <div class="used">
                     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/matlab/matlab-original.svg" />
                     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/kaggle/kaggle-original.svg" />
@@ -63,25 +60,43 @@
                     <button class="prev"><i class="fas fa-chevron-left"></i></button>
                     <button class="next"><i class="fas fa-chevron-right"></i></button>
                 </div>
+                <div class="desc">
+                    <p>
+                        This data mining project focuses on customer segmentation using the Naive Bayes algorithm. 
+                        By analyzing personality traits and purchase history data, the system identifies distinct customer segments, 
+                        providing actionable insights for business optimization. The goal was to enhance targeting strategies and improve 
+                        marketing efforts by understanding customer behaviors and preferences more effectively.
+                    </p>
+                </div>
             </div>
         </div>
         <div class="project-item">
             <h1>Data Analytics</h1>
             <div class="carousel-used">
-                <a href="https://kualitasudarastasiunchina.streamlit.app/"><p>Analisis Data Kualitas Udara di Stasiun China</p></a>
                 <div class="used">
                     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/python/python-original.svg" />
                     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/streamlit/streamlit-original.svg" />
                 </div>
-                <div class="carousel">
-                    <div class="track">
-                        <img src="src\Data_AirQualityChina\best_month.png" alt="Best Month Graphics" class="slide">
-                        <img src="src\Data_AirQualityChina\five_years.png" alt="Five Years Graphics" class="slide">
-                        <img src="src\Data_AirQualityChina\pollutantbased.png" alt="Pollutant Based Graphics" class="slide">
-                        <img src="src\Data_AirQualityChina\whatis.png" alt="Dictionary" class="slide">
+                <a href="https://kualitasudarastasiunchina.streamlit.app/">
+                    <div class="carousel">
+                        <div class="track">
+                            <img src="src\Data_AirQualityChina\best_month.png" alt="Best Month Graphics" class="slide">
+                            <img src="src\Data_AirQualityChina\five_years.png" alt="Five Years Graphics" class="slide">
+                            <img src="src\Data_AirQualityChina\pollutantbased.png" alt="Pollutant Based Graphics" class="slide">
+                            <img src="src\Data_AirQualityChina\whatis.png" alt="Dictionary" class="slide">
+                        </div>
+                        <button class="prev"><i class="fas fa-chevron-left"></i></button>
+                        <button class="next"><i class="fas fa-chevron-right"></i></button>
                     </div>
-                    <button class="prev"><i class="fas fa-chevron-left"></i></button>
-                    <button class="next"><i class="fas fa-chevron-right"></i></button>
+                </a>
+                <div class="desc">
+                    <p>
+                        This project involved the analysis of air quality data collected from various stations across China, 
+                        aiming to visualize trends and provide insights into environmental conditions. Using data analysis techniques, 
+                        I developed an interactive dashboard with Streamlit, allowing users to explore key metrics like air pollution levels, 
+                        particulate matter, and air quality index (AQI). The goal was to raise public awareness about air quality and support 
+                        decision-making in environmental health
+                    </p>
                 </div>
             </div>
         </div>
