--- a/views/uiux.ejs
+++ b/views/uiux.ejs
@@ -18,7 +18,7 @@
         <div class="nav-item">
             <a href="/">Home</a>
             <a href="#contacts">Social Media</a>
-            <a href="https://drive.google.com/file/d/1Soylrd1pSTQMPPeI-fkUFjfQou2ARZ4K/view?usp=sharing" download>Curriculum Vitae</a>
+            <a href="https://drive.google.com/file/d/1hxsocjjNdeL9KiIubNPmzR0ZwkO56T95/view?usp=sharing" download>Curriculum Vitae</a>
             <div class="dropdown">
                 <a href="#">Portofolio</a>
                 <div class="dropdown-content">
@@ -44,9 +44,8 @@
     <section class="project" id="projects">
         <!--Project Item-->
         <div class="project-item">
-            <h1>Twizzed</h1>
+            <h1>Twizzed: Twitter-like app</h1>
             <div class="carousel-used">
-                <p>Twitter-like app</p>
                 <div class="used">
                     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/figma/figma-original.svg" />
                 </div>
@@ -61,12 +60,17 @@
                     <button class="prev"><i class="fas fa-chevron-left"></i></button>
                     <button class="next"><i class="fas fa-chevron-right"></i></button>
                 </div>
+                <div class="desc">
+                    <p>
+                        I designed a Twitter-like app, focusing on creating an easy-to-use interface. 
+                        Using Figma, I built the app layout and created an interactive prototype to showcase its features and user flow.
+                    </p>
+                </div>
             </div>
         </div>
         <div class="project-item">
-            <h1>Poutendance</h1>
+            <h1>Poutendance: Location-Based Attendance App</h1>
             <div class="carousel-used">
-                <p>Location-Based Attendance App</p>
                 <div class="used">
                     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/figma/figma-original.svg" />
                 </div>
@@ -80,6 +84,12 @@
                     </div>
                     <button class="prev"><i class="fas fa-chevron-left"></i></button>
                     <button class="next"><i class="fas fa-chevron-right"></i></button>
+                </div>
+                <div class="desc">
+                    <p>
+                        I designed a Twitter-like app, focusing on creating an easy-to-use interface. 
+                        Using Figma, I built the app layout and created an interactive prototype to showcase its features and user flow.
+                    </p>
                 </div>
             </div>
         </div>
