--- a/views/webdev.ejs
+++ b/views/webdev.ejs
@@ -18,7 +18,7 @@
         <div class="nav-item">
             <a href="/">Home</a>
             <a href="#contacts">Social Media</a>
-            <a href="https://drive.google.com/file/d/1Soylrd1pSTQMPPeI-fkUFjfQou2ARZ4K/view?usp=sharing" download>Curriculum Vitae</a>
+            <a href="https://drive.google.com/file/d/1hxsocjjNdeL9KiIubNPmzR0ZwkO56T95/view?usp=sharing" download>Curriculum Vitae</a>
             <div class="dropdown">
                 <a href="#">Portofolio</a>
                 <div class="dropdown-content">
@@ -68,6 +68,14 @@
                     <button class="prev"><i class="fas fa-chevron-left"></i></button>
                     <button class="next"><i class="fas fa-chevron-right"></i></button>
                 </div>
+                <div class="desc">
+                    <p>
+                        I created the Spicite website for the FTI COMP competition, where I became a finalist. 
+                        I handled the entire project, from designing the UI/UX to developing both the frontend and backend. 
+                        For the frontend, I used HTML5, CSS3, and JavaScript to make the site responsive and easy to use. For the backend, 
+                        I worked with Node.js, Express, and MongoDB. This project helped me improve my full-stack development skills.
+                    </p>
+                </div>
             </div>
         </div>
 
@@ -95,6 +103,15 @@
                     <button class="prev"><i class="fas fa-chevron-left"></i></button>
                     <button class="next"><i class="fas fa-chevron-right"></i></button>
                 </div>
+                <div class="desc">
+                    <p>
+                        I developed a website for PO UNTAR, handling both the frontend and backend. 
+                        For the frontend, I used HTML5, CSS3, and JavaScript to create a responsive user interface. 
+                        On the backend, I worked with PHP and Laravel for server-side logic and used MongoDB for data storage. 
+                        I also ensured smooth integration between the frontend and backend, performing testing to ensure the site worked 
+                        well across different browsers.
+                    </p>
+                </div>
             </div>
         </div>
 
@@ -114,6 +131,12 @@
                     </div>
                     <button class="prev"><i class="fas fa-chevron-left"></i></button>
                     <button class="next"><i class="fas fa-chevron-right"></i></button>
+                </div>
+                <div class="desc">
+                    <p>
+                        This project was developed to support the smooth execution of the GBI Mangga Besar prayer concert. 
+                        I was responsible for designing the UI/UX and developing the frontend of the website.
+                    </p>
                 </div>
             </div>
         </div>
@@ -138,6 +161,13 @@
                     <button class="prev"><i class="fas fa-chevron-left"></i></button>
                     <button class="next"><i class="fas fa-chevron-right"></i></button>
                 </div>
+                <div class="desc">
+                    <p>
+                        This project was developed to create an intuitive calorie-counting platform. 
+                        I was responsible for the end-to-end design of the UI/UX, as well as the development of the frontend, 
+                        ensuring a seamless and engaging user experience.
+                    </p>
+                </div>
             </div>
         </div>
 
@@ -158,6 +188,13 @@
                     </div>
                     <button class="prev"><i class="fas fa-chevron-left"></i></button>
                     <button class="next"><i class="fas fa-chevron-right"></i></button>
+                </div>
+                <div class="desc">
+                    <p>
+                        This project was developed to build an engaging online platform for a coffee shop. 
+                        I was responsible for the complete design of the UI/UX and the development of the frontend, 
+                        ensuring a seamless, intuitive, and visually appealing user experience that aligns with the brand's identity.
+                    </p>
                 </div>
             </div>
         </div>
