--- a/public/css/project.css
+++ b/public/css/project.css
@@ -388,10 +388,19 @@ PROJECT
     height: auto;
 }                                                   
 
+.desc{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    line-height: 22.4px;
+}
 .carousel-used p{
+    text-align: center;
     margin: 10px;
     font-size: 1rem;
     font-weight: 500;
+    word-break: break-all;
+    width: 60%;
 }
 
 .carousel {
@@ -511,14 +520,22 @@ PROJECT
         border-radius: 4px;
         width: 15px;
         height: auto;
-    }                                                   
-    
+    }  
+    .desc{
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        line-height: 17.92px;
+    }
     .carousel-used p{
+        text-align: center;
         margin: 10px;
         font-size: 0.8rem;
         font-weight: 300;
+        word-break: break-all;
+        width: 100%;
     }
-    
+                                                     
     .carousel {
         position: relative;
         width: 100%;
