--- a/views/appdev.ejs
+++ b/views/appdev.ejs
@@ -18,7 +18,7 @@
         <div class="nav-item">
             <a href="/">Home</a>
             <a href="#contacts">Social Media</a>
-            <a href="https://drive.google.com/file/d/1Soylrd1pSTQMPPeI-fkUFjfQou2ARZ4K/view?usp=sharing" download>Curriculum Vitae</a>
+            <a href="https://drive.google.com/file/d/1hxsocjjNdeL9KiIubNPmzR0ZwkO56T95/view?usp=sharing" download>Curriculum Vitae</a>
             <div class="dropdown">
                 <a href="#">Portofolio</a>
                 <div class="dropdown-content">
@@ -46,7 +46,6 @@
         <div class="project-item">
             <h1>Poutendance</h1>
             <div class="carousel-used">
-                <p>Aplikasi UKM Berbasis Lokasi: Sistem Check-In dan Check-Out Ruangan serta Pemindahan Kunci Menggunakan QR Acak</p>
                 <div class="used">
                     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/dart/dart-original.svg" />
                     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/flutter/flutter-original.svg" />
@@ -61,6 +60,14 @@
                     </div>
                     <button class="prev"><i class="fas fa-chevron-left"></i></button>
                     <button class="next"><i class="fas fa-chevron-right"></i></button>
+                </div>
+                <div class="desc">
+                    <p>
+                        This application allows for easy tracking of room key ownership within an SME setting. 
+                        Users check in and check out the room key by scanning a randomized QR code, ensuring secure and efficient management 
+                        of key distribution. The system helps to identify who currently holds the key at any given time, streamlining the 
+                        key-handling process.
+                    </p>
                 </div>
             </div>
         </div>
