--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,7 @@
             <a href="#academics">Academics</a>
             <a href="#experiences">Experiences</a>
             <a href="#projects">Projects</a>
-            <a href="https://drive.google.com/file/d/1Soylrd1pSTQMPPeI-fkUFjfQou2ARZ4K/view?usp=sharing" download>Curriculum Vitae</a>
+            <a href="https://drive.google.com/file/d/1hxsocjjNdeL9KiIubNPmzR0ZwkO56T95/view?usp=sharing" download>Curriculum Vitae</a>
         </div>
     </nav>
     
@@ -47,16 +47,21 @@
     <section class="about" id="about">
         <div class="about-item">
             <h1>ABOUT ME</h1>
-            <p>
-                Hello, I'm Hans Christian Handoto. I am currently an undergraduate student in Informatics Engineering at 
-                Tarumanagara University. I have had the opportunity to <span class="highlight">lead and teach 58 students for approximately six months</span>, 
-                which has greatly enhanced my <span class="highlight">problem-solving, time-management, leadership and instructional skills.</span>  
-                My technical skills span across a range of areas, including <span class="highlight">full-stack web development, mobile app development, and UI/UX design.</span>
-                I am proficient in tools such as <span class="highlight">Adobe Photoshop, Premiere Pro, and Figma</span>, and have hands-on experience with programming languages 
-                like <span class="highlight">C++ and Java</span>. In addition to my technical abilities, I am also experienced in graphic design, photo and video editing, and copywriting.
-                I have engaged in various volunteer and leadership roles, such as coordinating events and managing teams. 
-                My passion for integrating design with technology drives my approach to creating innovative and user-friendly solutions.
-            </p>
+            <a href="https://www.linkedin.com/in/hans-christian-handoto">
+                <div class="about-container">
+                    <img src="src/self.jpg" alt="My Photo">
+                    <p>
+                        Hello, I'm Hans Christian Handoto. I am currently an undergraduate student in Informatics Engineering at 
+                        Tarumanagara University. I have had the opportunity to <span class="highlight">lead and teach 58 students for approximately six months</span>, 
+                        which has greatly enhanced my <span class="highlight">problem-solving, time-management, leadership and instructional skills.</span>  
+                        My technical skills span across a range of areas, including <span class="highlight">full-stack web development, mobile app development, and UI/UX design.</span>
+                        I am proficient in tools such as <span class="highlight">Adobe Photoshop, Premiere Pro, and Figma</span>, and have hands-on experience with programming languages 
+                        like <span class="highlight">C++ and Java</span>. In addition to my technical abilities, I am also experienced in graphic design, photo and video editing, and copywriting.
+                        I have engaged in various volunteer and leadership roles, such as coordinating events and managing teams. 
+                        My passion for integrating design with technology drives my approach to creating innovative and user-friendly solutions.
+                    </p>
+                </div>
+            </a>
         </div>
         <div class="stats">
             <div class="language-proficiency">
@@ -160,8 +165,10 @@
     <!--Experience-->
     <section class="experience" id="experiences">
         <h1>EXPERIENCES</h1>
+    
+        <!-- Experience 1: Fakultas Teknologi Informasi Universitas Tarumanagara -->
         <div class="animate-on-scroll slide-right">
-            <div class="experience-item left">
+            <div class="experience-item">
                 <div class="experience-item-child">
                     <div class="blur" style="transition-delay: 0.7s">
                         <a href="https://www.linkedin.com/in/hans-christian-handoto"><img src="src/UNTAR.png" alt="UNTAR"></a>
@@ -177,25 +184,29 @@
                 </div>
             </div>
         </div>
+    
+        <!-- Experience 2: Persekutuan Oikoumene Universitas Tarumanagara -->
         <div class="animate-on-scroll slide-left">
-            <div class="experience-item right">
+            <div class="experience-item">
                 <div class="experience-item-child">
+                    <div class="blur" style="transition-delay: 0.7s">
+                        <a href="https://www.linkedin.com/in/hans-christian-handoto"><img src="src/POUT.png" alt="POUT"></a>
+                    </div>
                     <div class="animate-on-scroll slide-left">
-                        <div class="experience-item-child-text-right">
+                        <div class="experience-item-child-text-left">
                             <h2>Persekutuan Oikoumene Universitas Tarumanagara</h2>
                             <div class="lighten">
                                 <ul id="POUT-list"></ul>
                             </div>
                         </div>
                     </div>
-                    <div class="blur" style="transition-delay: 0.7s">
-                        <a href="https://www.linkedin.com/in/hans-christian-handoto"><img src="src/POUT.png" alt="POUT"></a>
-                    </div>
                 </div>
             </div>
         </div>
+    
+        <!-- Experience 3: Huawei Certified ICT Associate -->
         <div class="animate-on-scroll slide-right">
-            <div class="experience-item left">
+            <div class="experience-item">
                 <div class="experience-item-child">
                     <div class="blur" style="transition-delay: 0.7s">
                         <a href="https://www.linkedin.com/in/hans-christian-handoto"><img src="src/Huawei.png" alt="Huawei"></a>
@@ -211,49 +222,58 @@
                 </div>
             </div>
         </div>
+    
+        <!-- Experience 4: Varanity -->
         <div class="animate-on-scroll slide-left">
-            <div class="experience-item right">
+            <div class="experience-item">
                 <div class="experience-item-child">
+                    <div class="blur" style="transition-delay: 0.7s">
+                        <a href="https://www.linkedin.com/in/hans-christian-handoto"><img src="src/Varanity.png" alt="Varanity"></a>
+                    </div>
                     <div class="animate-on-scroll slide-left">
-                        <div class="experience-item-child-text-right">
+                        <div class="experience-item-child-text-left">
                             <h2>Varanity</h2>
                             <div class="lighten">
                                 <ul id="Varanity-list"></ul>
                             </div>
                         </div>
                     </div>
-                    <div class="blur" style="transition-delay: 0.7s">
-                        <a href="https://www.linkedin.com/in/hans-christian-handoto"><img src="src/Varanity.png" alt="Varanity"></a>
-                    </div>
                 </div>
             </div>
         </div>
     </section>
-
+    
     <!--Project-->
     <section class="project" id="projects">
         <h1>PROJECTS</h1>
         <div class="project-item">
             <div class="carousel">
                 <div class="track">
+                    <!-- Project 1: Web Development -->
                     <div class="slide">
                         <img src="src/WebDev.png" alt="Web Dev">
                         <div class="slide-text">
                             <a href="/webdev"><h2>Web Development</h2></a>
                         </div>
                     </div>
+
+                    <!-- Project 2: Data -->
                     <div class="slide">
                         <img src="src/DataMining.png" alt="Data">
                         <div class="slide-text">
                             <a href="/data"><h2>Data</h2></a>
                         </div>
                     </div>
+
+                    <!-- Project 3: UI/UX -->
                     <div class="slide">
                         <img src="src/UIUX.png" alt="UI/UX"> 
                         <div class="slide-text">
                             <a href="/uiux"><h2>UI/UX</h2></a>
                         </div>
                     </div>
+
+                    <!-- Project 4: App Development -->
                     <div class="slide">
                         <img src="src/Appdev.png" alt="App dev"> 
                         <div class="slide-text">
