Adding new porto

--- a/views/webdev.ejs
+++ b/views/webdev.ejs
@@ -116,6 +116,35 @@
         </div>
 
         <div class="project-item">
+            <h1>HC Sandbox</h1>
+            <div class="carousel-used">
+                <div class="used">
+                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-original.svg" />
+                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/css3/css3-original.svg" />
+                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/javascript/javascript-original.svg" />
+                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/react/react-original.svg" />
+                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/tailwindcss/tailwindcss-original-wordmark.svg" />
+                </div>
+                <div class="carousel">
+                    <div class="track">
+                        <img src="src/Webdev_HCSandbox/Web.png" alt="Website" class="slide">
+                        <img src="src/Webdev_HCSandbox/game1.png" alt="Game Example" class="slide">
+                        <img src="src/Webdev_HCSandbox/Mobile.png" alt="Mobile" class="slide">
+                    </div>
+                    <button class="prev"><i class="fas fa-chevron-left"></i></button>
+                    <button class="next"><i class="fas fa-chevron-right"></i></button>
+                </div>
+                <div class="desc">
+                    <p>
+                        I advanced my front-end development skills through hands-on projects using React.js and Tailwind CSS. 
+                        This experience taught me to build dynamic, responsive web applications with component-based architecture 
+                        and modern styling, enhancing my ability to create scalable, maintainable code.
+                    </p>
+                </div>
+            </div>
+        </div>
+
+        <div class="project-item">
             <h1>KonserDoa</h1>
             <div class="carousel-used">
                 <div class="used">
