fixing overflow bugs

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -186,13 +186,13 @@
         </div>
     
         <!-- Experience 2: Persekutuan Oikoumene Universitas Tarumanagara -->
-        <div class="animate-on-scroll slide-left">
+        <div class="animate-on-scroll slide-right">
             <div class="experience-item">
                 <div class="experience-item-child">
                     <div class="blur" style="transition-delay: 0.7s">
                         <a href="https://www.linkedin.com/in/hans-christian-handoto"><img src="src/POUT.png" alt="POUT"></a>
                     </div>
-                    <div class="animate-on-scroll slide-left">
+                    <div class="animate-on-scroll slide-right">
                         <div class="experience-item-child-text-left">
                             <h2>Persekutuan Oikoumene Universitas Tarumanagara</h2>
                             <div class="lighten">
@@ -224,13 +224,13 @@
         </div>
     
         <!-- Experience 4: Varanity -->
-        <div class="animate-on-scroll slide-left">
+        <div class="animate-on-scroll slide-right">
             <div class="experience-item">
                 <div class="experience-item-child">
                     <div class="blur" style="transition-delay: 0.7s">
                         <a href="https://www.linkedin.com/in/hans-christian-handoto"><img src="src/Varanity.png" alt="Varanity"></a>
                     </div>
-                    <div class="animate-on-scroll slide-left">
+                    <div class="animate-on-scroll slide-right">
                         <div class="experience-item-child-text-left">
                             <h2>Varanity</h2>
                             <div class="lighten">
